fix: chat dialog overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+pre {
+  @apply whitespace-pre !important;
+}
